name:                 COMP1130Maze-Local
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Allen Ma
maintainer:           riallenma@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable COMP1130Maze-Local
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  build-depends:        codeworld-api
  hs-source-dirs:       src
  default-language:     Haskell2010
